[project]
name = "Stagehand"
license = { text = "MIT License" }
version = "2024.0.0"
requires-python = ">= 3.10"
dependencies = [
    "ahk==0.14.2",
    "ahk-binary==1.1.33.9",
    "appdirs",
    "click",
    "codex-engine-pyqt",
    "cyberlang",
    "inquirerpy",
    "monaco-qt",
    "numpy",
    "pygame-ce",
    "psutil",
    "pydantic==1.10.8",
    "pynput",
    "pyserial",
    "PySide6==6.7.0",
    "QtAwesome",
    "QtPy",
    "qtstrap",
    "sounddevice",
    "superqt",
]
