[project]
name = "stagehand"
version = "0.2.1"
description = "An event-based desktop automation tool for Windows, Linux, and macOS."
readme = "README.md"
authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
classifiers = [
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Freeware",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Text Editors",
]
requires-python = ">= 3.10"
dependencies = [
    "qtstrap>=0.6.6",
    "pyside6>=6.7.2",
    "pyserial>=3.5",
    "cyberlang>=0.7.0",
    "monaco-qt>=0.1.9",
    "numpy>=2.0.1",
    "psutil>=6.0.0",
    "sounddevice>=0.4.7",
    "superqt>=0.6.7",
    "codex-engine-pyqt>=0.2.0",
    "ahk[binary]==0.14.2",
    "pygame-ce>=2.5.1",
    "pynput>=1.7.7",
    "promisio>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/DaelonSuzuka/Stagehand"
Repository = "https://github.com/DaelonSuzuka/Stagehand"
Issues = "https://github.com/DaelonSuzuka/Stagehand/issues"

[project.scripts]
"stagehand" = "stagehand.__main__:main"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "twine",
]

[tool.uv.sources]
qtstrap = { workspace = true }
codex-engine-pyqt = { workspace = true }
monaco-qt = { workspace = true }

[tool.uv.workspace]
members = [
    "../qtstrap",
    "../codex-engine-pyqt",
    "../monaco-qt",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
