[metadata]
name = Stagehand
version = 2024.0.0
description = An event-based desktop automation tool for Windows, Linux, and macOS.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/DaelonSuzuka/Stagehand
author = David Kincaid
author_email = dlkincaid0@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: Software Development :: Widget Sets
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/DaelonSuzuka/Stagehand
    Tracker = https://github.com/DaelonSuzuka/Stagehand/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = true
install_requires =
    QtPy
    click
    inquirerpy
    appdirs
    qtawesome
    pyinstaller
python_requires = >=3.8

[bdist_wheel]
universal = 1
