[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Kincaid", email = "daelonsuzuka@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"test" = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test"]
